[skip ci] bot: adding cartridge and metadata files

--- a/cartridges/int_linkmoney_sfra/cartridge/templates/resources/linkmoney.properties
+++ b/cartridges/int_linkmoney_sfra/cartridge/templates/resources/linkmoney.properties
@@ -2,9 +2,19 @@ linkmoney.text.linked.bank=Paying from account:
 linkmoney.text.description=After clicking "Continue" you will be redirected to connect your bank account using Link Money’s Pay by Bank Solution.
 linkmoney.text.payment.status=Payment Status:
 linkmoney.text.last.digits=(...{0})
+linkmoney.text.account.section=Link Money - Pay By Bank
 
 linkmoney.button.link.bank=Continue
 linkmoney.button.change.bank=Select another account
 
 linkmoney.payment.error=Unable to process payment. Please choose another account
 linkmoney.payment.link.bank=You need to link to bank first
+
+linkmoney.tooltip.text1=Secure. Convenient. Pay by Bank.
+linkmoney.tooltip.text2=Choose Pay by Bank at checkout
+linkmoney.tooltip.text3=Securely log in through your bank
+linkmoney.tooltip.text4=Select your account and pay
+linkmoney.tooltip.text5=No account creation, pay quickly from your bank.
+linkmoney.tooltip.text6=Best card alternative - As secure as your credit, debt free like your debit.
+linkmoney.tooltip.text7=Link Money doesn’t have access to your login credentials.
+linkmoney.tooltip.text8=Link Money doesn’t rent or sell your data to third parties.
